--- a/requirements.txt
+++ b/requirements.txt
@@ -73,7 +73,7 @@ mkl_random=1.0.2=py36hd81dba3_0
 nbconvert=5.3.1=py36_0
 nbformat=4.4.0=py36_0
 ncurses=6.1=he6710b0_1
-notebook=5.7.4=py36_0
+notebook=5.7.8
 numpy=1.15.4=py36h7e9f1db_0
 numpy-base=1.15.4=py36hde5b4d6_0
 olefile=0.46=py36_0
@@ -115,15 +115,15 @@ soupsieve=1.7.1=py36_0
 sqlite=3.26.0=h7b6447c_0
 tensorboard=1.12.2=py36he6710b0_0
 tensorflow=1.12.0=gpu_py36he74679b_0
-tensorflow-base=1.12.0=gpu_py36had579c0_0
-tensorflow-gpu=1.12.0=h0d30ee6_0
+tensorflow-base=1.12.1
+tensorflow-gpu=1.12.1
 termcolor=1.1.0=py36_1
 terminado=0.8.1=py36_1
 testpath=0.4.2=py36_0
 tk=8.6.8=hbc83047_0
 tornado=5.1.1=py36h7b6447c_0
 traitlets=4.3.2=py36_0
-urllib3=1.24.1=py36_0
+urllib3=1.24.2
 wcwidth=0.1.7=py36_0
 webencodings=0.5.1=py36_1
 werkzeug=0.14.1=py36_0
