--- a/requirements.txt
+++ b/requirements.txt
@@ -41,7 +41,7 @@ ipython=7.2.0=py36h39e3cac_0
 ipython_genutils=0.2.0=py36_0
 ipywidgets=7.4.2=py36_0
 jedi=0.13.2=py36_0
-jinja2=2.10=py36_0
+jinja2>=2.10=py36_0
 jpeg=9b=h024ee3a_2
 jsonschema=2.6.0=py36_0
 jupyter=1.0.0=py36_7
@@ -113,10 +113,10 @@ sip=4.19.8=py36hf484d3e_0
 six=1.12.0=py36_0
 soupsieve=1.7.1=py36_0
 sqlite=3.26.0=h7b6447c_0
-tensorboard=1.12.2=py36he6710b0_0
-tensorflow=1.12.0=gpu_py36he74679b_0
-tensorflow-base=1.12.1
-tensorflow-gpu=1.12.1
+tensorboard=1.12.2
+tensorflow=1.12.2
+tensorflow-base=1.12.2
+tensorflow-gpu=1.12.2
 termcolor=1.1.0=py36_1
 terminado=0.8.1=py36_1
 testpath=0.4.2=py36_0
